--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,8 @@ a {
   color: inherit;
 }
 
+
+
 input, textarea {
   font-size: 1rem;
   outline: none;
@@ -392,6 +394,41 @@ label {
   padding: 20px;
 }
 
+#try-again {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+  user-select: none;
+  p {
+    margin: 10px 0;
+    font-size: 0.9rem;
+    max-width: 250px;
+    text-align: center;
+    color: $light-dark;
+  }
+  span {
+    font-weight: 600;
+    color: $light-dark;
+    padding-bottom: 30px;
+  }
+  img {
+    width: 30px;
+    height: 30px;
+  }
+  &.visible {
+    display: flex;
+  }
+}
+
 .articles {
   width: 100%;
   display: flex;
@@ -400,6 +437,8 @@ label {
   overflow: scroll;
   height: 100%;
   align-content: flex-start;
+  position: relative;
+
   .article {
     cursor: pointer;
     margin: 10px;
